# C-Lang

./: ASCIIValue.c  CMakeLists.txt  ClockMath.c  Conditional.c  Conditional2.c  Constant.c  If-Else.c  NestedIf-Else.c  Operation.c  OuterElse.c  OuterIf.c  datatypeIO.c  getFunc.c  seizeOf.c
