cmake_minimum_required(VERSION 3.23)
project(C_Lang C)

set(CMAKE_C_STANDARD 99)

add_executable(C_Lang main.c )
add_executable(ClockMath ClockMath.c)
add_executable(ASCIIValue ASCIIValue.c)
add_executable(getFunc getFunc.c)
add_executable(If-Else If-Else.c)
add_executable(datatypeIO datatypeIO.c)
add_executable(Constant Constant.c)
add_executable(seizeOf seizeOf.c)
add_executable(Operations Operation.c)
add_executable(Conditional Conditional.c)
add_executable(Conditional2 Conditional2.c)
add_executable(NestedIf-Else NestedIf-Else.c)
add_executable(OuterIf OuterIf.c)
add_executable(OuterElse OuterElse.c)
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()